--- a/app/views/post/edit.html.erb
+++ b/app/views/post/edit.html.erb
@@ -1,4 +1,5 @@
-<form action="/post/<%= @post.id %>" method="post">
+
+<form action="/post/<%= @post.id %>" method="post" align="center">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <label for="input_text">Title</label>
   <input name="input_title" id="input_text" type="text" value="<%= @post.title %>">
@@ -8,3 +9,4 @@
   <br />
   <input class="btn" type="submit" value="작성">
 </form>
+
