--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,3 +1,4 @@
+<div align='center'>
 <form action="/post" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <label for="input_text">Title</label>
@@ -9,14 +10,6 @@
   <input class="btn" type="submit" value="작성">
 </form>
 <p>—————————————————————————</p>
-<% @posts.each do |p| %>
-  <div>
-    <h3><%=p.title%></h3>
-    <a data-method="get" href="/post/<%=p.id%>">읽기</a>
-    <a href="/edit/<%=p.id%>">수정</a>
-    <a data-method="delete" href="/post/<%=p.id%>">삭제</a>
-  </div>
-  <p>—————————————————————————</p>
-  <br>
-<% end %>
+
 <%= paginate @posts %>
+</div>
